--- a/Final_Project.html
+++ b/Final_Project.html
@@ -6,7 +6,7 @@
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="stylef.css">
+  <link rel="stylesheet" href="CSS/stylef.css">
 </head>
 <title>John Schmitt</title>
   <section>
