--- a/Final_Project.html
+++ b/Final_Project.html
@@ -40,13 +40,13 @@
 <li>Selected to visit the Big Four accounting firms as well as 2 smaller firms.</li>
 <li>Discussed the different types of accounting, such as forensic, tax, and audit.</li>
 </ul>
-<h6><u>Mock Convention Delegate to Pennsalyvania's 14th Congressional District</u></h6>
+<h6><u>Mock Convention Delegate to Pennsylvania's 14th Congressional District</u></h6>
 <ul>
-<li>Created a report on historical, demographical, and economic voting patterns of Pennsalyvania's 14th District.</li>
+<li>Created a report on historical, demographical, and economic voting patterns of Pennsylvania's 14th District.</li>
 </ul>
 </section>
   <section>
-    <h7><u>Expierance___________________________</u></h7>
+    <h7><u>Experience___________________________</u></h7>
 
 <h8><u>Advance America, Spartanburg, SC</u> - <em>A South Carolina based sub-prime lending company operating in 28 states.</em></h8>
 <p><strong>Internships in Credit and Data Analytics and Financial Planning and Analysis</strong></p>
