--- a/Final_Project.html
+++ b/Final_Project.html
@@ -19,7 +19,7 @@
         <button id="btnOutlook"><u>SchmittJ21@mail.wlu.edu</u></button></a>
     <button onclick="window.location.href='https://www.google.com/maps/dir/37.7886278,-79.4366873/118+N+Randolph+St,+Lexington,+VA+24450/@37.7874499,-79.4406193,17z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x884ccbbbaa8446a3:0x7cf6ed9800e957f1!2m2!1d-79.4394679!2d37.7861192';"><u>118 North Randolph Street, Lexington, VA 24450</u></button>
    <a href="https://www.linkedin.com/in/john-schmitt-b8b961191/">
-        <button id="btnOutlook"><u>LinkedIn</u></button></a>
+        <button id="btnOutlook"><u>LinkedIn Profile</u></button></a>
     </div>
   <h2><u>Education____________________________</u></h2>
 </section>
