--- a/Final_Project.html
+++ b/Final_Project.html
@@ -54,9 +54,9 @@
 <p><strong>Internships in Credit and Data Analytics and Financial Planning and Analysis</strong></p>
 <ul>
   <li>Analyzed and compared two title loan types:  Automated Clearing House (ACH) & No Objection Certificate (NOC).</li>
-  <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
-  <li style="margin-left:2em">Identified advantages and disadvantages of ACH and NOC loans.</li>
-  <li style="margin-left:2em; padding-bottom: 0;">Developed an analytical on-line presentation which demonstrated the value
+  <li TYPE="square" style="list-style-type: lower-alpha; padding-bottom: 0;">
+  <li TYPE="square" style="margin-left:2em">Identified advantages and disadvantages of ACH and NOC loans.</li>
+  <li TYPE="square" style="margin-left:2em; padding-bottom: 0;">Developed an analytical on-line presentation which demonstrated the value
     to continue selling ACH loans.</li>
     <li style="margin-left:2em; padding-bottom: 0;">Based upon this analysis and presentation the Regional Directors continued
        to offer ACH loans to customers.</li>
