--- a/Final_Project.html
+++ b/Final_Project.html
@@ -53,13 +53,15 @@
 <h8><u>Advance America, Spartanburg, SC</u> - <em>A South Carolina based sub-prime lending company operating in 28 states.</em></h8>
 <p><strong>Internships in Credit and Data Analytics and Financial Planning and Analysis</strong></p>
 <ul>
+  <ul TYPE="square>
   <li>Analyzed and compared two title loan types:  Automated Clearing House (ACH) & No Objection Certificate (NOC).</li>
-  <li TYPE="square" style="list-style-type: lower-alpha; padding-bottom: 0;">
-  <li TYPE="square" style="margin-left:2em">Identified advantages and disadvantages of ACH and NOC loans.</li>
-  <li TYPE="square" style="margin-left:2em; padding-bottom: 0;">Developed an analytical on-line presentation which demonstrated the value
+  <li style="list-style-type: lower-alpha; padding-bottom: 0;">
+  <li style="margin-left:2em">Identified advantages and disadvantages of ACH and NOC loans.</li>
+  <li style="margin-left:2em; padding-bottom: 0;">Developed an analytical on-line presentation which demonstrated the value
     to continue selling ACH loans.</li>
     <li style="margin-left:2em; padding-bottom: 0;">Based upon this analysis and presentation the Regional Directors continued
        to offer ACH loans to customers.</li>
+                                                   </ul>
     </ol>
 <li>Tracked customer reactivation in seven key states and assisted in the development of an improved online portal which
   improved customer access to Advance America, reducing the need for additional brick and mortar stores.</li>
