--- a/Final_Project.html
+++ b/Final_Project.html
@@ -53,7 +53,7 @@
 <h8><u>Advance America, Spartanburg, SC</u> - <em>A South Carolina based sub-prime lending company operating in 28 states.</em></h8>
 <p><strong>Internships in Credit and Data Analytics and Financial Planning and Analysis</strong></p>
 <ul>
-  <ul TYPE="square>
+  <ul TYPE="square">
   <li>Analyzed and compared two title loan types:  Automated Clearing House (ACH) & No Objection Certificate (NOC).</li>
   <li style="list-style-type: lower-alpha; padding-bottom: 0;">
   <li style="margin-left:2em">Identified advantages and disadvantages of ACH and NOC loans.</li>
