--- a/Final_Project.html
+++ b/Final_Project.html
@@ -52,16 +52,17 @@
 
 <h8><u>Advance America, Spartanburg, SC</u> - <em>A South Carolina based sub-prime lending company operating in 28 states.</em></h8>
 <p><strong>Internships in Credit and Data Analytics and Financial Planning and Analysis</strong></p>
-<ol>
+<ul>
+  <ul>
   <li>Analyzed and compared two title loan types:  Automated Clearing House (ACH) & No Objection Certificate (NOC).</li>
-  <ul TYPE="square">
-  <li style="list-style-type: lower-alpha; padding-bottom: 0;">
+  <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
   <li style="margin-left:2em">Identified advantages and disadvantages of ACH and NOC loans.</li>
   <li style="margin-left:2em; padding-bottom: 0;">Developed an analytical on-line presentation which demonstrated the value
     to continue selling ACH loans.</li>
     <li style="margin-left:2em; padding-bottom: 0;">Based upon this analysis and presentation the Regional Directors continued
        to offer ACH loans to customers.</li>
-</ul>
+     </ol>
+    </ol>
 <li>Tracked customer reactivation in seven key states and assisted in the development of an improved online portal which
   improved customer access to Advance America, reducing the need for additional brick and mortar stores.</li>
 <li>Assisted in a study to appropriately incent high performance sales leaders resulting in better recognition and reward for
@@ -71,7 +72,7 @@
   performance.</li>
 <li>Audited lending procedures in Texas offices to identify any discriminatory practices, with a conclusion that there
   were no such biases.</li>
-</ol>
+</ul>
   <h9><u>Equitable, Charlotte, NC</u> - <em>A financial services company providing individual & group retirement and life insurance products in the US.</em></h9>
   <ul>
     <li>In interviews with Equitable, which were curtailed upon office closures due to pandemic.	</li>
